# CAFE5

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALL  Makefile  Makefile.cray  Makefile.cray_classic  Makefile.gcc  Makefile.in  Makefile.intel  Makefile.pgi  README.md  build.sh  config.h.in  config_file_1.cfg  configure.ac  main.cpp  results_0.001_p10_max.txt  results_0.005_p10_max.txt  results_0.01_p10_max.txt  results_l0.0001.txt  results_l0.9.txt  results_sims.txt  simulation_l0.01.txt  simulation_p10_sim0.001.txt  simulation_p10_sim0.005.txt  simulation_pois10_sim0.01.txt  simulation_sim0.01.txt  simulation_unif_sim0.001.txt  simulation_unif_sim0.005.txt  simulation_unif_sim0.01.txt  test.cpp
Test_data/: Test_data_readMe.docx  ~$st_data_readMe.docx
Test_data/Birds_of_Paradise/: 8BoP.tree.tre  8BoP_genefamilies.tab  BoP_rootdist.txt  simulation_K7_L.00226_A.98.txt
Test_data/Hymenoptera_Data/: 10Hymen_rootdist.txt  10Hymenoptera.tree  10Hymenoptera_genefamilies.tab  simulation_k6_L.0037_A.37.txt
Test_data/Primate_data/: 12Primate_genefamilies.tab  12Primates.tree  Root_dist.txt  simulation_k4_L.00453_A.62.txt
config_files/: instructions.txt  simulate_base_model.cfg  simulate_base_model.cfg~
docs/: CAFE5.bib  CAFE5.tex  Makefile
docs/architecture/: 0001-record-architecture-decisions.md  0002-record-architecture-decisions.md  0003-do-not-perturb-lambdas-in-simulations.md  0004-use_median-rather-than-mean-in-gamma-discretization.md  0005-remove_chisquare_option.md  0006-calculate_pvalues.md
docs/tutorial/: cafe5_draw_tree.py  clade_and_size_filter.py  common_names.sh  longest_iso.py  maximum_likelihood_tree.txt  mcl2rawcafe.py  prep_r8s.py  separate_lambdas.txt  tutorial.md
examples/: all_cafe_commands.sh  chimphuman_separate_lambda.txt  errormodel_0.1.txt  genefam_data.txt  lambda_tree.txt  mammal_gene_families.txt  mammals_root_dist.txt  mammals_root_dist.txt~  mammals_tree.txt  poisson_root_dist_1000.txt  poisson_root_dist_10000.txt  test_input_data.txt  test_root_dist.txt  test_tree.txt  tree.txt  unif_root_dist_10000.txt
scripts/: barista.py  barista.py~  batch_cfg_maker_inference.py  cfg_maker.py  lk_surface.R  remove_taxa.py  xp2cafe.py
sim_results/: results_0.001_p10.txt  results_0.001_unif.txt  results_0.005_p10.txt  results_0.005_unif.txt  results_0.01_p10.txt  results_0.01_unif.txt  results_p10_on_p10_0.001.txt  results_p10_on_p10_0.005.txt  results_p10_on_p10_0.01.txt  results_p10_on_unif_0.001.txt  results_p10_on_unif_0.005.txt  results_p10_on_unif_0.01.txt  results_p10_on_unif_0.01.txt~  results_unif_on_p10_0.001.txt  results_unif_on_p10_0.005.txt  results_unif_on_p10_0.01.txt  results_unif_on_unif_0.001.txt  results_unif_on_unif_0.005.txt  results_unif_on_unif_0.01.txt
sim_results_max/: results_0.001_p10_max.txt  results_0.001_unif_max.txt  results_0.005_unif_max.txt  results_0.01_unif_max.txt  results_p10_on_p10_0.001_max.txt  results_p10_on_p10_0.005_max.txt  results_p10_on_p10_0.01_max.txt  results_p10_on_unif_0.001_max.txt  results_p10_on_unif_0.005_max.txt  results_p10_on_unif_0.01_max.txt  results_unif_on_p10_0.001_max.txt  results_unif_on_p10_0.005_max.txt  results_unif_on_p10_0.01_max.txt  results_unif_on_unif_0.001_max.txt  results_unif_on_unif_0.005_max.txt  results_unif_on_unif_0.01_max.txt
src/: CMakeLists.txt  LBFGS_Strategy.cpp  LBFGS_Strategy.h  base_model.cpp  base_model.h  cafexp.cpp  child_calculator.cpp  child_calculator.h  chisquare.h  clade.cpp  clade.h  classes.h  core.cpp  core.h  doctest.h  easylogging++.h  error_model.cpp  error_model.h  execute.cpp  execute.h  family_generator.cpp  family_generator.h  fminsearch.cpp  fminsearch.h  gamma.cpp  gamma.h  gamma_bundle.cpp  gamma_bundle.h  gamma_core.cpp  gamma_core.h  gene_family.cpp  gene_family.h  gene_family_reconstructor.cpp  gene_family_reconstructor.h  io.cpp  io.h  io.h~  lambda.cpp  lambda.h  likelihood_ratio.cpp  (+29 more)
src/LBFGSpp/: LBFGS.h
src_docs/: doxygen.cfg
